tdf#155661 Apply border from center point not from whole size

Regression from 6965bb07bb33429a7663a3f3ebe58ed89c4327d9
and 8b8a988f38b704e466211bb91a3269756c34222b.

Change-Id: I2e8c21fbdbbc7efb4b473c63b098044384a70d6c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154501
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit 4202dfcae19ee47e9a3fda02fac34c18cb0d16ff)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154543